finishing out features

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -10,3 +10,9 @@
 .blacktext{
     color: black;
 }
+.header-fix {
+    position: absolute;
+    top: -2px;
+    right: 11rem;
+    padding-top: 1rem;
+}
