--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,14 +1,18 @@
 #recentForm > *:not(:last-child) {
     margin-right: 1rem;
 }
-#recentTracksResults {
+.recentTracksResults {
     display: flex;
     flex-wrap: wrap;
     padding: 5px;
     justify-content: center;
 }
 
-#recentTracksResults > div {
+.recentTracksResults > div {
     margin-right: 1rem;
     margin-bottom: 1rem;
+}
+
+.tab-content {
+    padding: 1rem;
 }
