--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer center-all" *ngIf="signedIn">
     <hr style="width: 50%;">
-    © Mainstreamify 2021, a project by Neil Menon and Harrison Li<br>
+    © Spotify Dashboard 2021, a project by Neil Menon and Harrison Li<br>
     <a href="https://github.com/neilmenon/mainstreamify" target="_blank"><i class="fab fa-github"></i> Github neilmenon/mainstreamify</a>
 </div>
