--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container id="nav" class="sidenav-container">
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      <a class="mobile-menu-toggle" *ngIf="signed_in && user && (isHandset$ | async)" mat-button [matMenuTriggerFor]="menu">
+      <a class="mobile-menu-toggle" style="padding-top: 0.8rem;" *ngIf="signed_in && user && (isHandset$ | async)" mat-button [matMenuTriggerFor]="menu">
         <span>
           <mat-icon aria-label="side menu">menu</mat-icon>
         </span>
@@ -22,10 +22,10 @@
           <button mat-menu-item [routerLink]="['/']">Sign Out</button>
         </mat-menu>
       </a>
-      <span [routerLink]="['/']" style="cursor: pointer;outline: none;" aria-label="Mainstreamify" id="headertext">Mainstreamify </span> <span class="beta" style="cursor: pointer;outline: none;">BETA</span>
+      <span [routerLink]="['/']" style="cursor: pointer;outline: none;" aria-label="Mainstreamify" id="headertext">Spotify Dashboard </span> <span class="beta" style="cursor: pointer;outline: none;">BETA</span>
       <span class="spacer"></span>
       <span *ngIf="!(isHandset$ | async)">
-        <a *ngIf="signed_in && user" class="navbar-user-button" mat-button [matMenuTriggerFor]="menu" aria-label="open menu">
+        <a *ngIf="signed_in && user" class="navbar-user-button header-fix" mat-button [matMenuTriggerFor]="menu" aria-label="open menu">
           <span>
             <mat-icon aria-label="side menu">menu</mat-icon>
           </span>
